# SpeAcouPy

./: .gitignore  INSTALLATION.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
SpeAcouPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: getting-started.md  index.md
docs/cli/: commands.md  index.md
docs/concepts/: overview.md
docs/config/: overview.md
docs/results/: interpreting-plots.md
docs/tutorials/: sealed-box.md
examples/: cfg_global_space_driver.yaml  cfg_global_space_vented.yaml  config_bandpass.yaml  config_boundary.yaml  config_closedbox_impedanceflat.yaml  config_driver.yaml  config_horn.yaml  config_labeled.yaml  config_minimal.yaml  config_mks.yaml  config_parallel.yaml  config_series.yaml  config_transmissionline.yaml  config_wideband.yaml  config_woofer-in-closedbox.yaml  config_woofer-in-freeair.yaml
scripts/: generate_cli_docs.py
site/: 404.html  index.html  sitemap.xml
site/cli/: index.html
site/examples/: sealed.yaml
site/getting-started/: index.html
site/search/: search_index.json
speacoupy/: __init__.py  __main__.py  acoustic.py  busy.py  cli.py  constants.py  domains.py  driver.py  electrical.py  mechanical.py  plotting.py  radiators.py  response.py  transformers.py  yaml_utils.py
tests/: test_import_and_cli.py
validationtests/bandpass/: Faital12PR320-OSMC-warm_Vituix_Impedance_bandpass_Vclos25L-Vport52-52L-portL8cm-portD9.4cm.txt  Faital12PR320-OSMC-warm_Vituix_SPL_bandpass_Vclos25L-Vport52-52L-portL8cm-portD9.4cm-2pi.txt  SpeAcouPy_output_DATA.csv  config_bandpass.yaml  test
validationtests/closedbox/: Faital12PR320-OSMC-warm_Vituix_Impedance_closedbox-25L.txt  Faital12PR320-OSMC-warm_Vituix_SPL_closedbox-25L-2pi.txt  SpeAcouPy_output_DATA.csv  SpeAcouPy_output__DATA.csv  config_closedbox.yaml  (+3 more)
(+61 files in other folders)
