
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SpeAcouPy"
version = "0.5.1"
description = "Loudspeaker Modelling using Networks of Electrical, Mechanical and Acoustical Elements in Python"
authors = [{name="Matthias Brennwald"}]
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "pyyaml", "scipy", "pandas", "pytz"]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

[tool.setuptools.packages.find]
where = [""]
include = ["speacoupy*"]

[project.scripts]
speacoupy = "speacoupy.cli:main"
